Fix dark mode Add DEVELOPMENT env variable uninstall api cache

--- a/public/styles2.css
+++ b/public/styles2.css
@@ -25,6 +25,7 @@
   --orders: #181818;
   --orders-border: #292929;
 }
+/*Datatable dark mode*/
 [data-theme="dark"] .dataTable-sorter::before {
   border-top: 4px solid #fff;
   opacity.0.5
@@ -36,9 +37,16 @@
 [data-theme="dark"] .dataTable-dropdown label{
   color: #fff;
 }
+[data-theme="dark"] .dataTable-pagination a {
+  color: #888686;
+}
 [data-theme="dark"]  .map-tiles {
         filter:var(--map-tiles-filter, none);
-	}
+}
+[data-theme="dark"] .modal-content {
+  background-color: #212121;
+  color: #fff;
+}
 
 html {
   height: 100%;
@@ -210,8 +218,8 @@ header img {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--white-color);
-  color: var(--background-color);
+  background-color: #121212;
+  color: #fff;
   opacity: 0.9;
   z-index: 2;
   pointer-events: all;
